# shell

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel
.aspect/: config.axl
.github/workflows/: ci.yaml
tools/: BUILD.bazel  repin
tools/format/: BUILD.bazel
tools/gazelle/: BUILD.bazel
