"""BUILD definition for the formatter binary

This is in its own package because it has so many loading-time symbols,
we don't want to trigger eager fetches of these for builds that don't want to run format.
"""

load("@aspect_rules_lint//format:defs.bzl", "format_multirun")

# gazelle:exclude
package(default_visibility = ["//:__subpackages__"])

# NB: no `starlark` formatter here — Starlark is formatted by the always-on
# `aspect buildifier` task, which only needs buildifier_prebuilt.
format_multirun(
    name = "format",
    shell = "@aspect_rules_lint//format:shfmt",

    # TODO: wire scala (scalafmt) — scalafmt ships per-platform native binaries
    # that need a multitool lockfile entry; add it and a `scala = ...` arg here.
)
